fix(tabs): label overflow on vertical tabs

--- a/packages/components/src/components/bal-tabs/components/tab-label.sass
+++ b/packages/components/src/components/bal-tabs/components/tab-label.sass
@@ -40,6 +40,7 @@
   &--vertical
     text-align: left
     width: auto
+    white-space: normal
   //
   // context styles
   &--context-meta
